# MilkDeliveryApp

./: .gitignore  pyproject.toml
.github/workflows/: deploy-milkdelivery.yml
backend/: alembic.ini  test_sqlalchemy.py
backend/alembic/: env.py
backend/alembic/versions/: 9a797975239e_create_vendors_and_customers_tables.py
backend/app/: database.py  main.py  models.py
backend/tests/: test_subscription.py
frontend/: index.html  style.css
