[project]
name = "tinymagiq-fde"
version = "0.1.0"
description = "TinyMagiq FDE Training Repository"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[all]>=0.135.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "sqlalchemy>=2.0.48",
]
